<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- information -->
  <name>pgo_r2h</name>
  <version>0.0.0</version>
  <description>description</description>
  <maintainer email="dasol.aero@gmail.com">dasol</maintainer>
  <license>license</license>

  <!-- build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- dependency -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- test dependency -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
